fixing alignment

--- a/SASS/layout/_body.scss
+++ b/SASS/layout/_body.scss
@@ -5,6 +5,7 @@
 body{
     width: 100%;
     margin: 0;
+    max-width: 1440px;
 
     a{
         text-decoration: unset;
@@ -15,3 +16,4 @@ body{
         }
     }
 }
+
