--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
 body {
   width: 100%;
   margin: 0;
+  max-width: 1440px;
 }
 body a {
   text-decoration: unset;
@@ -206,14 +207,12 @@ body a:hover {
 }
 
 .fonctionnement {
-  padding-left: 20px;
-  margin: 50px 0 20px 0px;
+  padding: 40px 8% 70px;
 }
 .fonctionnement__steps {
   display: grid;
-  grid-template-columns: 95%;
+  grid-template-columns: 100%;
   grid-template-rows: 90px 90px 90px;
-  padding-left: 10px;
 }
 .fonctionnement__steps i {
   width: 25%;
@@ -248,10 +247,7 @@ body a:hover {
 
 .restaurants {
   background-color: #F6F6F6;
-  margin: 40px 0 0 0;
-}
-.restaurants__content {
-  padding: 40px 20px 40px 20px;
+  padding: 50px 8% 50px;
 }
 .restaurants__card {
   text-decoration: none;
@@ -260,7 +256,6 @@ body a:hover {
   position: relative;
 }
 .restaurants__card--link {
-  border: 2px solid transparent;
   border-radius: 15px;
   margin-bottom: 20px;
   background-color: #FFFFFF;
@@ -308,7 +303,7 @@ body a:hover {
   }
   .fonctionnement {
     margin-bottom: 60px;
-    padding: 0px 55px 0px 55px;
+    padding: 20px 100px 0px 100px;
   }
   .fonctionnement__steps {
     display: flex;
@@ -321,18 +316,17 @@ body a:hover {
   .fonctionnement h3 {
     font-size: 15px;
   }
-  .restaurants__title {
-    margin-left: 8%;
+  .restaurants {
+    padding: 20px 100px 0px 100px;
   }
   .restaurants__box {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-    column-gap: 60px;
     row-gap: 20px;
   }
   .restaurants__card {
-    width: 43%;
+    width: 45%;
   }
 }
 @media screen and (min-width: 1250px) {
